// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bucket: Grid renders correctly with all props 1`] = `
<div
  className="b-grid "
  largeCols="1fr 1fr"
  largeGutter="var(--gutter-medium)"
  mediumCols="1fr 1fr"
  mediumGutter="var(--gutter)"
  smallCols="1fr"
  smallGutter="var(--gutter)"
  style={
    Object {
      "--grid-col-l": undefined,
      "--grid-col-m": undefined,
      "--grid-col-s": undefined,
      "--grid-col-xl": undefined,
      "--grid-gap-l": undefined,
      "--grid-gap-m": undefined,
      "--grid-gap-s": undefined,
      "--grid-gap-xl": undefined,
    }
  }
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;

exports[`Bucket: Grid renders correctly without any props 1`] = `
<div
  className="b-grid "
  style={
    Object {
      "--grid-col-l": undefined,
      "--grid-col-m": undefined,
      "--grid-col-s": undefined,
      "--grid-col-xl": undefined,
      "--grid-gap-l": undefined,
      "--grid-gap-m": undefined,
      "--grid-gap-s": undefined,
      "--grid-gap-xl": undefined,
    }
  }
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;
